# myEditor

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Math/: libMath.cpp  libMath.hpp
src/renderEngine/: utilsRender.h  utilsRender.h.in
src/renderEngine/Camera/: Camera.cpp  Camera.hpp
src/renderEngine/Display/: Display.cpp  Display.hpp
src/renderEngine/Entity/: Entity.cpp  Entity.hpp
src/renderEngine/Loader/: Loader.cpp  Loader.hpp
src/renderEngine/Models/RawModel/: RawModel.cpp  RawModel.hpp
src/renderEngine/Models/TexturedModel/: TexturedModel.cpp  TexturedModel.hpp
src/renderEngine/Renderer/: Renderer.cpp  Renderer.hpp
src/renderEngine/Shaders/: simple.frag  simple.vert
src/renderEngine/Shaders/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.hpp
src/renderEngine/Shaders/StaticShader/: StaticShader.cpp  StaticShader.hpp
src/renderEngine/Texture/ModelTexture/: ModelTexture.cpp  ModelTexture.hpp
